[package]
name = "http_client"
version = "0.1.0"
authors = ["kaleb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
native-tls = "0.2.4"
regex = "1.3.9"
serde_json = "1.0.58"
serde = { version = "1.0.116", features = ["derive"] }